<?xml version="1.0" encoding="utf-8"?>
<!--
 *========================================================================
 * strings.xml
 * Sep 25, 2013 12:33 PM | variable
 * Copyright (c) 2013 Richard Banasiak
 *========================================================================
 * This file is part of CoinFlip.
 *
 *    CoinFlip is free software: you can redistribute it and/or modify
 *    it under the terms of the GNU General Public License as published by
 *    the Free Software Foundation, either version 3 of the License, or
 *    (at your option) any later version.
 *
 *    CoinFlip is distributed in the hope that it will be useful,
 *    but WITHOUT ANY WARRANTY; without even the implied warranty of
 *    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *    GNU General Public License for more details.
 *
 *    You should have received a copy of the GNU General Public License
 *    along with CoinFlip.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="about_activity_title">About Coin Flip</string>
    <string name="about_menu_title">About</string>
    <string name="about_text">
        A convenient way to flip a coin, even if you don\'t have one. 
        Simply tap the question mark or shake and view the result. Tap or shake
        to spin the coin again.
        \n\nAnimation, Sound, Text, Vibration, Shake-to-Flip, Coin Type, Statistics and Diagnostic
        Test settings are all configurable via the Settings Menu. Verify the flip algorithm is
        truly pseudo-random by running the diagnostics test and flipping the coin 100,000 times
        (or more!).
        \n\n\nQuarter-dollar coin images from the United States Mint.
        Presidential $1 Coin images from the United States Mint.
        \n\n\nCopyright © 2013 - Richard Banasiak
        \nOpen-source contributions from Alex Baker
    </string>
    <string name="app_name">Coin Flip</string>
    <string name="coin_animation">Coin Animation</string>
    <string name="exit">Exit</string>
    <string name="instructions_tap_shake_tv">Tap/Shake to Flip Coin</string>
    <string name="instructions_tap_tv">Tap to Flip Coin</string>
    <string name="heads">HEADS</string>
    <string name="max">MAX</string>
    <string name="milliseconds">ms</string>
    <string name="min">OFF</string>
    <string name="rate_app_text">Rate App on Google Play</string>
    <string name="reset">Reset</string>
    <string name="selftest_activity_title">Coin Flip Diagnostic Test</string>
    <string name="selftest_menu_title">Diagnostics</string>
    <string name="settings_activity_title">Coin Flip Settings</string>
    <string name="settings_header_basic_title">Basic Settings</string>
    <string name="settings_header_advanced_title">Advanced Settings</string>
    <string name="settings_item_animation_summary">Render spinning coin animation</string>
    <string name="settings_item_animation_title">Animation</string>
    <string name="settings_item_coin_summary">The type of coin to be displayed</string>
    <string name="settings_item_coin_title">Coin Type</string>
    <string name="settings_item_download_summary">Download more coins from Google Play</string>
    <string name="settings_item_download_title">Get More Coins</string>
    <string name="settings_item_force_summary">Force required</string>
    <string name="settings_item_force_title">Shake</string>
    <string name="settings_item_selftest_title">Diagnostic Test</string>
    <string name="settings_item_selftest_summary">iterations</string>
    <string name="settings_item_selftest_dialog">Number of Iterations</string>
    <string name="settings_item_sound_summary">Play sound after coin flip</string>
    <string name="settings_item_sound_title">Sound</string>
    <string name="settings_item_stats_summary">Keep track of HEADS vs TAILS</string>
    <string name="settings_item_stats_title">Statistics</string>
    <string name="settings_item_text_summary">Display HEADS/TAILS result text</string>
    <string name="settings_item_text_title">Text</string>
    <string name="settings_item_vibrate_summary">Vibrate on coin flip</string>
    <string name="settings_item_vibrate_title">Vibrate</string>
    <string name="settings_menu_title">Settings</string>
    <string name="tails">TAILS</string>
    <string name="time">TIME</string>
    <string name="toast_coin_error">Coin Not Found - Resetting Selection</string>
    <string name="total">TOTAL</string>
    <string name="unknown">UNKNOWN</string>
    <string name="version">version</string>
</resources>