<?xml version="1.0" encoding="utf-8"?>
<!--
 *========================================================================
 * settings.xml
 * Sep 24, 2012 10:12:16 AM | variable
 * Copyright (c) 2012 Richard Banasiak
 *========================================================================
 * This file is part of CoinFlip.
 *
 *    CoinFlip is free software: you can redistribute it and/or modify
 *    it under the terms of the GNU General Public License as published by
 *    the Free Software Foundation, either version 3 of the License, or
 *    (at your option) any later version.
 *
 *    CoinFlip is distributed in the hope that it will be useful,
 *    but WITHOUT ANY WARRANTY; without even the implied warranty of
 *    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *    GNU General Public License for more details.
 *
 *    You should have received a copy of the GNU General Public License
 *    along with CoinFlip.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="animation"
        android:title="@string/settings_item_animation_title"
        android:summary="@string/settings_item_animation_summary"
        android:defaultValue="true" />    
    <CheckBoxPreference
        android:key="sound"
        android:title="@string/settings_item_sound_title"
        android:summary="@string/settings_item_sound_summary"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="stats"
        android:title="@string/settings_item_stats_title"
        android:summary="@string/settings_item_stats_summary"
        android:defaultValue="false" />    
    <CheckBoxPreference
        android:key="text"
        android:title="@string/settings_item_text_title"
        android:summary="@string/settings_item_text_summary"
        android:defaultValue="true" />        
    <CheckBoxPreference
        android:key="vibrate"
        android:title="@string/settings_item_vibrate_title"
        android:summary="@string/settings_item_vibrate_summary"
        android:defaultValue="true" /> 
    <com.banasiak.coinflip.SliderPreference
        android:key="shake"
        android:defaultValue="2"
        android:title="@string/settings_item_force_title"
        android:summary="@string/settings_item_force_summary"
        android:persistent="true"/> 
    <ListPreference 
        android:key="coin"
        android:title="@string/settings_item_coin_title"
        android:summary="@string/settings_item_coin_summary"
        android:defaultValue="default" 
        android:entries="@array/coins"
        android:entryValues="@array/coins_values" />
    <PreferenceScreen 
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="download"
        android:title="@string/settings_item_download_title"
        android:summary="@string/settings_item_download_summary" />
</PreferenceScreen>