<?xml version="1.0" encoding="utf-8"?>
<!--
 *========================================================================
 * menu.xml
 * Sep 25, 2013 11:39 AM | variable
 * Copyright (c) 2013 Richard Banasiak
 *========================================================================
 * This file is part of CoinFlip.
 *
 *    CoinFlip is free software: you can redistribute it and/or modify
 *    it under the terms of the GNU General Public License as published by
 *    the Free Software Foundation, either version 3 of the License, or
 *    (at your option) any later version.
 *
 *    CoinFlip is distributed in the hope that it will be useful,
 *    but WITHOUT ANY WARRANTY; without even the implied warranty of
 *    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *    GNU General Public License for more details.
 *
 *    You should have received a copy of the GNU General Public License
 *    along with CoinFlip.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/settings_menu"
        android:title="@string/settings_menu_title"
        android:icon="@drawable/ic_menu_preferences"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/selftest_menu"
        android:title="@string/selftest_menu_title"
        android:icon="@drawable/ic_menu_view"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/about_menu"
        android:title="@string/about_menu_title"
        android:icon="@drawable/ic_menu_info_details"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        android:icon="@drawable/ic_menu_close_clear_cancel"
        android:showAsAction="ifRoom|withText" />
</menu>